--- a/doc/Journal/MultEucSpatialSkylines.tex
+++ b/doc/Journal/MultEucSpatialSkylines.tex
@@ -595,15 +595,15 @@ Input data has been randomly generated using the standard C++ random library. Th
 
 \subsection{Approaches}
 
-We implemented and tested 4 different CPU approaches to compare with our GPU proposal. Single thread, single thread discarding, single thread sorting and multi thread.\newline
+We implemented and tested 4 different CPU approaches to compare with our GPU proposal.\newline
 
 \textbf{Single thread:} We use a single thread algorithm were all points of $P$ are tested against all points of $P$. To check if $p_i$ is a skyline, we check for all $p_j \in P$ $j \neq i$ if $p_i$ is dominated by $p_j$. Whenever $p_j$ dominates $p_i$ we discard $p_i$ as skyline. If there is no $p_j$ that dominates $p_i$ then we add $p_i$ to the list of skylines. We repeat the process sequentially for all $p_i \in P$.\newline
 
 \textbf{Discarding:} In the single thread approach, when we are testing if $p_j$ dominates $p_i$ we compute the distances from $p_i$ to $Q$ and from $p_j$ to $Q$. Eventually, we will have to compute if $p_j$ is dominated by $p_i$, computing again distances between $p_j$ to $Q$ and from $p_i$ to $Q$.\newline
 
-In this approach when we compare if $p_i$ is dominated by $p_j$ we also check if $p_j$ is dominated by $p_i$. Instead of quit when we find that $p_j$ does not dominate $p_i$ we then check if $p_j$ is dominated by $p_i$. We prevent to recompute some distances twice. This forces us to keep a list of points that have already been checked previously and we found that is being dominated by someone else.\newline
+In this approach when we compare if $p_i$ is dominated by $p_j$ we also check if $p_j$ is dominated by $p_i$. Instead of quit when we find that $p_j$ does not dominate $p_i$, we then check if $p_j$ is dominated by $p_i$. We prevent to recompute some distances twice. This forces us to keep a list of points that have already been checked previously and we found that is being dominated by someone else.\newline
 
-\textbf{Multi thread discarding:} If a point $p_i$ is skyline or not, does not affect the result of $p_j, j \neq i$ to be skyline or not. Thus, it is easy to imagine how we can implement the discarding approach in multiple threads. We set up a maximum number of threads and each thread is responsible of computing the skylines of a subset of $P$. We keep the list of skylines updates in a thread safe structure.\newline
+\textbf{Multi thread discarding:} If a point $p_i$ is skyline or not, does not affect the result of $p_j, j \neq i$ to be skyline or not. Thus, it is easy to imagine how we can implement the discarding approach in multiple threads. We set up a maximum number of threads and each thread is responsible of computing the skylines of a subset of $P$. We keep the list of skylines updated in a thread safe structure.\newline
 
 \textbf{Sorting:} We implemented the (FALTA CITA)\newline
 
@@ -615,19 +615,21 @@ In Figure \ref{fig:nearest_performance} we show the performance obtained in each
 
 First observation when computing nearest skylines, is that the discarding approach causes a big impact on performance. Up to 79\% of performance by discarding unnecessary comparisons. The multi thread discarding approach has a penalty for smaller sets due to the synchronization of the threads. As long as the input data grows, the penalty is mitigated by the improvement produced by the parallelization of the tasks. Finally, the sorting algorithm performs really well. That is, the sorting algorithm is able to discard many points reducing the number of operations.
  
-Our proposal, the GPU algorithm, shows a penalty for smaller sets. The GPU additional steps like uploading to GPU memory or launching the kernel, reduces the performance such that is a bad approach for small sets. As well as the multi thread discarding, when the input data grows, the performance of the GPU approach does too. We observe an improvement up to 89\% for bigger sets.
+Our proposal, the GPU algorithm, shows a penalty for smaller sets. The GPU additional steps like uploading to GPU memory or launching the kernel, reduces the performance, turning it into a bad option for small sets. Although, as well as the multi thread discarding approach, when the input data grows, the performance of the GPU approach does too. We observe an improvement up to 89\% for bigger sets.
 
-Note that, in the GPU approach, we considered the total time taken to compute the skylines as the time to upload to GPU memory, plus the time to compute the skyline, plus download the result back to CPU.
+Note that, in the GPU approach, we considered the total time taken to compute the skylines as the time to upload to GPU memory the input sets, plus the time to compute the skyline, plus download the result back to CPU.
 
 The running times in Figure \ref{fig:nearest_running_times} show how, the distribution of the data may cause an impact on performance. Note that the last set with 100K input $P$ points, runs faster than the previous test with 75K points. Since the points are randomly distributed it may happen that, some $p_i$ can be discarded very quick because its positions relatively to $Q$. This causes the improvement in the last test.
 
-If we take a look at the furthest skylines results (Figure \ref{fig:furthest_performance}), we observe that the improvement respect to baseline algorithm, changed. Although, discarding approach performs better, the multi thread discarding, is not better than the single thread. The same way, the sorting algorithm also suffers a performance regression respect the nearest. We can also observe from \ref{fig:furthest_running_times} that to compute the furthest skyline, it is almost twice expensive than to compute the nearest skyline although, we use the same input data set in all tests. The reason below.
+If we take a look at the furthest skylines results (Figure \ref{fig:furthest_performance}), we observe that the improvement respect to baseline algorithm, changed. Although, discarding approach performs better, the multi thread discarding, is not better than the single thread. The same way, the sorting algorithm also suffers a performance regression respect the nearest. We can also observe from Figure \ref{fig:furthest_running_times} that to compute the furthest skyline, it is almost twice expensive than to compute the nearest skyline even we use the same input data sets in all tests. The reason below.
 
-Figure \ref{fig:nearest_vs_furthest_num_comparisons} shows the number of comparisons performed in the single thread approach for the nearest and the furthest skyline respectively. In this case we use two differently distributed input data. Both data sets, $Q\ point\ inside$ and $Q\ point\ outside$, have $|P|=20K$ and $|Q|=1$. In both, positions of points are uniformly distributed among a given region an the weight of points from $P$ have been set to 10. That is, weighted distance is the same as the Eucludian distance. The difference between both data sets od the position of unique point $q_0$. In $Q\ point\ inside$, $q_0$ is located in the center of the region covered by $P$, meanwhile in $Q\ point\ outside$, $q_0$ is located outside the region.
+Figure \ref{fig:nearest_vs_furthest_num_comparisons} shows the total number of comparisons (distances between points computed) performed using the single thread approach for the nearest and the furthest skyline respectively. In this case we use two differently distributed input data. Both data sets, $Q\ point\ inside$ and $Q\ point\ outside$, have $|P|=20K$ and $|Q|=1$. In both, positions of points are uniformly distributed among a given region an the weight of points from $P$ have been set to 10. That is, weighted distance is the same as the Eucludian distance. The difference between both data sets is the position of unique point $q_0$. In $Q\ point\ inside$, $q_0$ is located in the center of the region covered by $P$, meanwhile in $Q\ point\ outside$, $q_0$ is located outside the region.
 
 We observe that for the nearest skyline computation, the number of operations is smaller than the furthest, but when we change the distribution of the points, the trend swaps.
 
-The reason relies on how quick we can accept a point as skyline. We can not discard a point $p_i$ as non skyline until we compare against the $p$ points closer to $Q$ points. Because, in a the $Q\ point\ outside$ set, closer points are fewer than $Q\ point\ inside$ set, there exists just a few points which can determine, that a point is not skyline. Thus, we must compare more points until we reach a closer point. Consequently, more comparisons and higher running times. Although, when we compute the furthest skyline, the close or far respect to $Q$ perspective swaps. That is why we observe an opposite pattern for different input sets.
+The reason relies on how quick we can reject a point as skyline. We can not discard a point $p_i$ as non skyline until we compare against the $p$ points closer to $Q$ points. Because, in a the $Q\ point\ outside$ set, closer points are fewer than $Q\ point\ inside$ set, there exists just a few points which can determine, that a point is not skyline. Thus, we must compare more points until we reach a closer point. Consequently, more comparisons and higher running times. 
+
+When we compute the furthest skyline, the close or far respect to $Q$ meaning is exchanged with respect to the nearest. That is why we observe an opposite pattern for the two different input sets.
 
 In our benchmarks, the random generated data follows the $Q\ point\ inside$ pattern. That is why in our results, the performance of the nearest, is significantly better than the furthest.
 
